# alphamine

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_demo.py
agent-memory/: MEMORY.md  project-goal-paper-trading.md
alphamine/: __init__.py  agents.py  alpha.py  alpha101.py  data.py  dsl.py  evaluate.py  library.py  llm.py  miner.py  report.py  seeds.py
infra/: Dockerfile  README.md  run_job.py
infra/local/: Makefile  README.md  docker-compose.yml
tests/: test_agents.py  test_llm.py  test_parallel.py  test_report.py  test_smoke.py
